<resources>
    <string name="app_name">Trivia</string>
    <string name="answer4">hj</string>
    <string name="answer3">hj</string>
    <string name="answer2">hj</string>
    <string name="answer1">hj</string>
    <string name="question">Question No.</string>
    <string name="questionair">Ask?</string>
    <string name="countdown">15</string>
    <string name="trivia_leaderboard">Trivia Leaderboard</string>
    <string name="score">0</string>
    <string name="scoretext">Score: </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signup">Signup</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="play">Play</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="trivia">Trivia</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="login">Login</string>
</resources>