<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainGame">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/scoretext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/scoretext"
            android:textSize="19sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/scoretext"
            android:text="@string/score"
            android:layout_marginLeft="5sp"
            android:textSize="19sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:src="@drawable/anoda1"
            android:layout_toLeftOf="@+id/Questionshead"
            android:layout_marginLeft="100sp"
            android:focusable="false"
            android:alpha="0.7">
        </ImageView>

        <TextView
            android:id="@+id/Questionshead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/question"
            android:textSize="25sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40sp">

            <ProgressBar
                android:id="@+id/timescroll"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="59dp"
                android:layout_height="match_parent"

                android:max="15"
                android:layout_below="@+id/timer"
                android:progress="15"
                android:visibility="visible"
                />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0.4"
                android:text="@string/countdown"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15sp"
            >

            <TextView

                android:id="@+id/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:gravity="center"
                android:minHeight="70sp"
                android:text="@string/questionair"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                android:padding="16sp"
                android:layout_marginTop="40sp"


                />

            <Button
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2"
                android:padding="16sp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"

                />

            <Button
                android:id="@+id/answer3"
                android:padding="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"

                />
            <Button
                android:id="@+id/answer4"
                android:padding="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer4"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="30sp"
                />
            <Button
                android:id="@+id/confirm"
                android:padding="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:visibility="invisible"
                android:layout_marginRight="90sp"
                android:layout_marginLeft="90sp"
                android:layout_marginTop="30sp"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>