<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register_login"
    >

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="70dp"
            android:src="@drawable/arrow"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            >
        </ImageView>



        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/anoda1"
            android:layout_toLeftOf="@+id/Questionshead"
            android:layout_marginLeft="7dp"
            android:focusable="false"
            android:alpha="0.7">
        </ImageView>

        <TextView
            android:id="@+id/Questionshead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/trivia"
            android:textSize="25sp"
            android:textStyle="bold" />


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/top">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <RelativeLayout
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:hint="@string/username"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <EditText
                android:id="@id/passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50sp"
                android:layout_marginRight="40dp"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/fpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passcode"
                android:layout_alignParentRight="true"
                android:layout_marginRight="40dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fpassword"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="20dp"
                android:height="60dp"
                android:text="@string/login"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/type"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/caccount"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/new_user_create_account"
                android:textColor="@color/black"
                android:textStyle="bold">

            </TextView>
        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
